# haskell-json

./: .gitignore  json-parser.cabal
app/: Main.hs
src/: Parser.hs
test/: Spec.hs
