cabal-version:      2.4
name:               json-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gustavo Mendes de Medeiros
maintainer:         gustavomendes.medeiros@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    exposed-modules:
        Parser

    build-depends:    base ^>=4.14.3.0
    default-language: Haskell2010
                    
test-suite json-parser
    type: exitcode-stdio-1.0

    main-is: Spec.hs
    build-depends:
      , base ^>=4.14.3.0
      , json-parser
      , tasty ^>= 1.4.2
      , tasty-hunit ^>= 0.10.0.3
    hs-source-dirs:   test
    default-language: Haskell2010